# rsound-instrument

./: .gitignore  Cargo.toml
examples/: chain-sound.rs  chain.rs  detuned.rs  rack.rs  sine.rs  sound.rs  square.rs
src/: lfo.rs  lib.rs  oscillator.rs
src/envelope/: mod.rs
src/generator/: chain.rs  detuned.rs  mod.rs  simple.rs
