[package]
name = "instrument"
version = "0.1.0"
edition = "2021"

[dependencies]
note = { version="^0", path="../rsound-note" }
graph = { version="^0", path="../rsound-graph", optional=true }
rsound-output = { version="^0", path="../rsound-output", optional=true }
wasm-bindgen = { version = "0.2", optional=true }

[features]
default=["graph", "rsound-output"]
wasm = ["wasm-bindgen"]
